testing/tests/ui/json-too-many-args.stderr
error: unexpected argument(s) in `json` filter
 --> OneTwoThree.txt:1:3
       "1|json(2, 3) }}"
 --> tests/ui/json-too-many-args.rs:6:25
  |
6 | #[template(ext = "txt", source = "{{ 1|json(2, 3) }}")]
  |                         ^^^^^^
